# ifstd-rs

./: .gitmodules  .travis.yml  Cargo.toml
cheapglk/: Cargo.toml  build.rs
cheapglk/examples/: model-cheapglk.rs  model.rs
cheapglk/src/: array_registry.rs  c_interface.rs  lib.rs
glk/: Cargo.toml
glk/examples/: model.rs
glk/src/: array.rs  gidispa.rs  lib.rs
glkterm/: Cargo.toml  build.rs
glkterm/examples/: model-glkterm.rs  model.rs
glkterm/src/: array_registry.rs  c_interface.rs  lib.rs
glktest/: Cargo.toml
glktest/src/: lib.rs
glktest/tests/: model.rs
glulx/: Cargo.toml
glulx/src/: accel.rs  call.rs  execute.rs  gestalt.rs  glk_dispatch.rs  glk_selector.rs  iosys.rs  lib.rs  malloc.rs  opcode.rs  operand.rs  save.rs  search.rs  state.rs  trace.rs
glulx/tests/: accelfunctest.rs  arraylimittest.rs  counterfeit.rs  glulxercise.rs  memcopytest.rs  memheaptest.rs  memstreamtest.rs  resizememstreamtest.rs
glulx/tests/common/: mod.rs
grue/: Cargo.toml
grue/src/: cheap-grue.rs  grue.rs  main.rs  run.rs
